css/main.css
/*  FONTS */

@font-face {
    font-family: Impact;
    src: url(../fonts/impact.ttf);
}


/* BASE */

* {
    box-sizing: border-box;
}

html {
    color: rgb(37, 36, 36);
}

body {
    text-align: center;
}

footer {
    position: absolute;
    bottom: 100px;
    left: 50%;
    transform: translateX(-50%);
}

.canvas {
    background-color: aquamarine;
}


/* Images Gallery */

.images-gallery {
    width: 100%;
}

.images-gallery img {
    width: 200px;
    margin: 5px;
}

.images-gallery img:hover {
    cursor: pointer;
}


/* CANVAS EDITOR  */

.canvas-container {
    height: 50vh;
}

.editor-box {
    display: none;
    justify-content: center;
    gap: 10px;
    align-items: center;
}

.editor-box .btn {
    font-size: 1rem;
    border: 1px solid #222;
    background-color: #fff;
}

.editor-box .btn:hover {
    background-color: rgb(180, 176, 176);
    cursor: pointer;
}


/*  CONTROL BOX */

.editor-box .control-box * {
    line-height: 1.5;
    margin: 5px;
    /* display: inline-block; */
}

.editor-box .control-box img {
    width: 30px;
    vertical-align: middle;
}

.editor-box .control-box img:hover {
    cursor: pointer;
}


/* HELPERS */

.flex {
    display: flex;
}


/* MEDIA QUERIES  */

@media (max-width: 800px) {
    .editor-box {
        flex-direction: column;
    }
    .canvas-container {
        background-color: #fff;
        /* height: 324px;
        width: 329px; */
    }
}

